packages/yew-macro/tests/props_macro/resolve-prop-fail.stderr
error[E0277]: can't compare `Props` with `Props`
 --> tests/props_macro/resolve-prop-fail.rs:3:17
  |
3 | #[derive(Clone, Properties)]
  |                 ^^^^^^^^^^ no implementation for `Props == Props`
  |
  = help: the trait `PartialEq` is not implemented for `Props`
note: required by a bound in `yew::Properties`
 --> $WORKSPACE/packages/yew/src/html/component/properties.rs
  |
  | pub trait Properties: PartialEq {
  |                       ^^^^^^^^^ required by this bound in `yew::Properties`
  = note: this error originates in the derive macro `Properties` (in Nightly builds, run with -Z macro-backtrace for more info)
